# aoc2021

./: Cargo.toml  README.md  cppsols  runcpp.sh
aoc++/: get_task.hpp  main.cpp  task1.hpp  util.hpp
aocpy/: task1.py  task4.py
src/: get_task.rs  main.rs  task01.rs  task02.rs  task03.rs  task04.rs  task05.rs  task06.rs  task07.rs  task08.rs  task09.rs  task1.rs  task10.rs  task11.rs  task12.rs  task13.rs  task14.rs  task15.rs  task16.rs  task17.rs  task18.rs  task19.rs  task2.rs  task3.rs  task4.rs  task5.rs  task6.rs  task7.rs  task8.rs  task9.rs  util.rs
