[package]
name = "aoc2021"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
partition = "0.1.2"
itertools = "0.7.8"
adqselect = "0.1.3"

[dependencies.rug]
version = "1.14.0"
default-features = false
features = ["integer"]